--- a/examen-2025-12-18.qmd
+++ b/examen-2025-12-18.qmd
@@ -268,7 +268,7 @@ M &= \int_0^{\frac{\pi}{2}} \int_{1 - \frac{2y}{\pi}}^{\cos(y)} x \, dx \, dy \\
 &= \int_0^{\frac{\pi}{2}} \left[ \frac{x^2}{2} \right]_{1 - \frac{2y}{\pi}}^{\cos(y)} dy \\
 &= \int_0^{\frac{\pi}{2}} \left( \frac{\cos^2(y)}{2} - \frac{(1 - \frac{2y}{\pi})^2}{2} \right) dy \\
 &= \int_0^{\frac{\pi}{2}}  \frac{1 + \cos(2y)}{4}\,dy - \int_0^{\frac{\pi}{2}} \frac{1 - \frac{4y}{\pi} + \frac{4y^2}{\pi^2}}{2}\,dy \\
-&= \left[ \frac{y}{4} + \frac{\sin(2y)}{8} \right]_0^{\frac{\pi}{2}} - \left[ \frac{y}{2} - \frac{y^2}{\pi} + \frac{2y^3}{3\pi^2} \right]_0^{\frac{\pi}{2}} \\
+&= \left[ \frac{y}{4} + \frac{\operatorname{sen}(2y)}{8} \right]_0^{\frac{\pi}{2}} - \left[ \frac{y}{2} - \frac{y^2}{\pi} + \frac{2y^3}{3\pi^2} \right]_0^{\frac{\pi}{2}} \\
 &= \frac{\pi}{8} - \left( \frac{\pi}{4} - \frac{\pi}{4} + \frac{\pi}{12} \right) = \frac{\pi}{24}.
 \end{align*}
 
@@ -280,7 +280,7 @@ M_x &= \int_0^{\frac{\pi}{2}} \int_{1 - \frac{2y}{\pi}}^{\cos(y)} yx \, dx \, dy
 &= \int_0^{\frac{\pi}{2}} y \left(\frac{\cos^2(y)}{2} - \frac{(1 - \frac{2y}{\pi})^2}{2} \right) dy \\
 &= \int_0^{\frac{\pi}{2}} y \left(\frac{1+\cos(2y)}{4} - \frac{1 - \frac{4y}{\pi} + \frac{4y^2}{\pi^2}}{2} \right) dy \\
 &= \int_0^{\frac{\pi}{2}} \frac{y+y\cos(2y)}{4}\,dy - \int_0^{\frac{\pi}{2}} \frac{y}{2} - \frac{2y^2}{\pi} + \frac{2y^3}{\pi^2} \, dy \\
-&= \left[ \frac{y^2}{8} + \frac{y\sin(2y)}{8} + \frac{\cos(2y)}{16} \right]_0^{\frac{\pi}{2}} - \left[ \frac{y^2}{4} - \frac{2y^3}{3\pi} + \frac{y^4}{2\pi^2} \right]_0^{\frac{\pi}{2}} \\
+&= \left[ \frac{y^2}{8} + \frac{y\operatorname{sen}(2y)}{8} + \frac{\cos(2y)}{16} \right]_0^{\frac{\pi}{2}} - \left[ \frac{y^2}{4} - \frac{2y^3}{3\pi} + \frac{y^4}{2\pi^2} \right]_0^{\frac{\pi}{2}} \\
 &= \left( \frac{\pi^2}{32} - \frac{2}{16} \right) - \left( \frac{\pi^2}{16} - \frac{\pi^2}{12} + \frac{\pi^2}{32} \right)
 = \frac{\pi^2}{48} - \frac{1}{8}.
 \end{align*}
