--- a/examen-2026-01-13.qmd
+++ b/examen-2026-01-13.qmd
@@ -303,19 +303,20 @@ a.  La cota del error cometido al utilizar el polinomio de Maclaurin de orden $n
     \begin{align*}
     R^n(t) 
     &= \frac{A^{(n+1}(c)}{(n+1)!} t^{n+1}\\
-    &= 2(-1)^{n} \frac{n!}{(c+1)^{n+1}} t^{n+1}, \\
+    &= 2(-1)^{n} \frac{n!}{(n+1)!(c+1)^{n+1}} t^{n+1}, \\
+    &= \frac{2(-1)^{n}}{(n+1)(c+1)^{n+1}} t^{n+1},
     \end{align*}
 
     con $c\in (0, t)$. Para $n=3$ y $t=0.5$, tenemos
 
     \begin{align*}
     |R^3(0.5)| 
-    &= \left|\frac{2(-1)^{3} 3!}{(c+1)^{4}} (0.5)^{4}\right| \\
-    &= \frac{12}{(c+1)^{4}} \cdot 0.0625 \\
-    &= \frac{0.75}{(c+1)^{4}},
+    &= \left|\frac{2(-1)^{3}}{4(c+1)^{4}} (0.5)^{4}\right| \\
+    &= \frac{1}{2(c+1)^{4}} \cdot 0.0625 \\
+    &= \frac{0.03125}{(c+1)^4},
     \end{align*}
 
-    con $c\in (0, 0.5)$. Puesto que se trata de una función decreciente en ese intervalo, el valor máximo se alcanza en $c=0$, por lo que, una cota del error cometido es $|R^3(0.5)|\leq \frac{0.75}{(0+1)^{4}} = 0.75$.
+    con $c\in (0, 0.5)$. Puesto que se trata de una función decreciente en ese intervalo, el valor máximo se alcanza en $c=0$, por lo que, una cota del error cometido es $|R^3(0.5)|\leq \frac{0.03125}{(0+1)^{4}} = 0.03125$.
 :::
 
 
@@ -398,7 +399,8 @@ Para encontrar el máximo de los ingresos en este intervalo, primero obtenemos l
 $$
 i'(p) 
 = \alpha - \beta \ln(p) - \beta = 0
-\Leftrightarrow \ln(p) = \frac{\alpha}{\beta} - 1. 
+\Leftrightarrow \ln(p) = \frac{\alpha}{\beta} - 1
+\Leftrightarrow p = e^{\frac{\alpha}{\beta} - 1}.
 $$
 
 Para ver si este punto crítico es un máximo, calculamos la segunda derivada.
